# SceneClip

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Filosofi Light dan Dark Mode.md  PROMPT_TUTORIAL.md  README.md  SECURITY.md  build_log.txt  check_exports.js  check_exports_esm.js  debug-exports.cjs  debug-simple.cjs  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  test-results.json  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.config.ts.timestamp-1767801468730-45efab4426528.mjs
.github/workflows/: build-custom-ffmpeg.yml  build-extension.yml  prepare-sidecars.yml  release.yml
Analysis Report/: Analysis_Report.md  Code Analysis.md  Integration_Strategy.md  Keyring_Audit.md  Parabolic Reports.md  Parabolic_Deep_Analysis.md
Perbaikan/: Compilasi Ulang.md  Saran Tampilan.md  Saran1.md  Saran2.md
browser_extension/: background.js  content.js  manifest.json  styles.css
docs/: GUIDE.md  TROUBLESHOOTING.md
scripts/: benchmark.js  setup-binaries.js
src/: App.css  App.tsx  App_legacy.tsx  main.tsx  routeTree.gen.ts  setupTests.ts  types.ts  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: binary_resolver.rs  download_queue.rs  lib.rs  main.rs  server.rs  store_helpers.rs  ytdlp.rs
src-tauri/src/commands/: analysis.rs  download.rs  ffmpeg.rs  filesystem.rs  integrity.rs  io.rs  keyring.rs  metadata.rs  mod.rs  notifications.rs  power.rs  process.rs  queue.rs  settings.rs  stats.rs  system.rs  updater.rs
src/assets/: base.css  main.css
src/components/: AddDialog.tsx  AppGuard.tsx  Background.tsx  BinarySetupModal.tsx  ClipboardListener.tsx  CommandModal.tsx  CommonSettings.tsx  CompressDialog.tsx  ConfirmDialog.tsx  ConfirmationModal.tsx  ContextMenu.tsx  CoolLoader.tsx  CustomDateTimePicker.tsx  DownloadsView.tsx  ErrorBoundary.tsx  GuideModal.tsx  HistoryView.tsx  KeyringManager.tsx  MyAutoSizer.tsx  NativeLoader.tsx  NotificationCenter.tsx  Onboarding.tsx  RangeSlider.tsx  Select.tsx  SelectDownloadType.tsx  SettingsView.tsx  (+7 more)
target_check/: .rustc_info.json
(+545 files in other folders)
