[package]
name = "sceneclip"
version = "1.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sceneclip_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-shell = "2.3.3"
tauri-plugin-fs = "2.4.4"
tauri-plugin-dialog = "2.4.2"
tauri-plugin-notification = "2.3.3"
system_shutdown = "4.0.1"
tauri-plugin-http = "2.5.4"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3.31"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-autostart = "2"
window-vibrancy = { git = "https://github.com/tauri-apps/window-vibrancy", branch = "dev" }
tauri-plugin-os = "2"
sysinfo = "0.33"
tauri-plugin-deep-link = "2.4.5"
tauri-plugin-single-instance = { version = "2.3.7", features = ["deep-link"] }
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["cors"] }
tauri-plugin-store = "2"
keyring = "3"
keepawake = "0.6.0"
lazy_static = "1.5.0"
url = "2.5.8"
uuid = { version = "1.10", features = ["v4"] }
tauri-plugin-log = "2.8.0"
log = "0.4.29"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_System_Power"] }

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile more slowly, but better optimization
lto = true # Enable Link Time Optimization
opt-level = "s" # Optimize for size ("z" is also an option, but "s" is often balanced)
strip = true # Remove debug symbols
